--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <footer class="footer">
         <div class="container">
             <div class="row">             
-                <div class="col-4 offset-1 col-sm-2">
+                <div class="col-lg-4 col-xl-4 col-md-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
@@ -86,7 +86,7 @@
 		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
-                <div class="col-lg-4 col-sm-4 col-md-4  align-self-center">
+                <div class="col-lg-4 col-sm-4 col-md-4 col-xl-4 align-self-center">
                     <div class="text-center">
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
